--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "os-firebase-project-creator",
-  "version": "1.0.2",
+  "version": "1.0.35",
   "description": "this is a self contained module for creating an ios/android app in Firebase, and downloading the json file",
   "main": "index.js",
   "dependencies": {
-    "os-tools": "1.0.2",
-    "os-puppeteer-helper": "1.0.2"
+    "os-file-handler": "^1.3.7",
+    "os-puppeteer-helper": "^2.0.2",
+    "os-tools": "1.4.0",
+    "puppeteer-firefox": "^0.5.1"
   },
   "repository": {
     "type": "git",
-    "url": "osfunapps"
+    "url": "https://github.com/osfunapps/os-firebase-project-creator-npm"
   },
   "keywords": [
     "npm",
