--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "os-firebase-project-creator",
-  "version": "1.0.35",
+  "version": "1.0.41",
   "description": "this is a self contained module for creating an ios/android app in Firebase, and downloading the json file",
   "main": "index.js",
   "dependencies": {
     "os-file-handler": "^1.3.7",
-    "os-puppeteer-helper": "^2.0.2",
-    "os-tools": "1.4.0",
-    "puppeteer-firefox": "^0.5.1"
+    "os-puppeteer-helper": "^2.0.35",
+    "os-tools": "1.4.0"
   },
   "repository": {
     "type": "git",
